--- a/ServiceExample/app/src/main/res/values/strings.xml
+++ b/ServiceExample/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ServiceExample</string>
+    <string name="channel_name">ServiceExample</string>
+    <string name="channel_description">ServiceExample</string>
+    <string name="snooze">ServiceExample</string>
 </resources>
